@@ -48,6 +48,8 @@ FIXES
 
  * "None" grant on classes causes exposure of merged permissions
 
+ * Dashboard permissions not working
+
 
 
 
